--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,32 +1,25 @@
 body {
-    background-color: #F9FAFC;
+    background-color: #000000;
 }
 
 .brand {
     font-family: Lato, sans-serif;
-    font-size: 1.4rem;
-    font-weight: 700;
-    color: #4A4A4F;
+    font-size: 2rem;
+    font-weight: 60000;
+    color:  #7c7cdc;
 }
 
-.red-o {
-    color: #E84610;
-}
-
-.thin {
-    font-weight: 300;
-}
 
 .light-bg {
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
 }
 
 .dark-bg {
-    background-color: #445261;
+    background-color: #02172e;
 }
 
 .main-bg {
-    background-color: #F9FAFC;
+    background-color: #000000;
 }
 
 .card {
@@ -43,7 +36,7 @@ body {
     bottom: 5%;
     min-width: 30%;
     left: -2px;
-    background-color: #23BBBB;
+    background-color: #8a8a8a;
 }
 
 .author {
@@ -93,7 +86,7 @@ body {
 
 .post-link:hover,
 .page-link {
-    color: #E84610;
+    color: #e810d2;
 }
 
 .post-title {
@@ -107,7 +100,7 @@ body {
 }
 
 .btn-signup {
-    background-color: #23BBBB;
+    background-color: #e810d2;
     color: #fff;
 }
 
@@ -118,25 +111,30 @@ body {
 }
 
 .link {
-    color: #23BBBB;
+    color: #ffffff;
     text-decoration: none;
 }
 
 .link:hover,
 .link:active {
-    color: #445261;
+    color: #e810d2;
     text-decoration: underline;
 }
 
 .btn-like {
-    color: #E84610;
+    color: #ff0000;
     border: none;
     background: transparent;
 }
 
 .btn-like:hover,
 .btn-like:active {
-    color: #E84610;
+    color: #e810d2;
     background: transparent;
     border: none;
+}
+
+.post-image {
+    height: 200px;
+    width: 200px;
 }
