--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,22 @@
 
 {% block content %}
 
+{% load crispy_forms_tags %}
+
+<!-- Render when user is authenticated -->
+{% if user.is_authenticated %}
+<div class="container-fluid mt-4">
+    <div class="row">
+        <div class="col-12">
+
+            <a href="{% url 'user_post' %}">Make a Post</a>
+
+        </div>
+    </div>
+</div>
+{% endif %}
+
+
 <div class="container-fluid">
     <div class="row">
 
@@ -40,6 +56,8 @@
                 {% endfor %}
 
             </div>
+        </div>
+    </div>  </div>
         </div>
     </div>
     {% if is_paginated %}
