html pages edited and name and project changed from social media to football forum

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
                     {% endif %}
                 </ul>
                 <span class="navbar navbar-light bg-transparent">
-                    A Photo Sharing Platform
+                    Football for Everyone
                 </span>
             </div>
         </div>
@@ -78,7 +78,7 @@
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">ViewPoint 2022</p>
+        <p class="m-0 text-center text-white">"Game Tonight?" 2022</p>
     </footer>
 </body>
 
