--- a/templates/index.html
+++ b/templates/index.html
@@ -15,31 +15,25 @@
         </div>
     </div>
 </div>
-{% endif %}
+
 
 
 <div class="container-fluid">
     <div class="row">
 
-        <!-- Blog Entries Column -->
+        <!-- list of posts -->
         <div class="col-12 mt-3 left">
             <div class="row">
                 {% for post in post_list %}
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <div class="image-container">
-                                {% if "placeholder" in post.featured_image.url %}
-                                <img class="card-img-top"
-                                    src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg">
-                                {% else %}
-                                <img class="card-img-top" src=" {{ post.featured_image.url }}">
-                                {% endif %}
-                                <div class="image-flash">
+
+                                <div>
                                     <p class="author">Author: {{ post.author }}</p>
                                 </div>
-                            </div>
-                            <a href="{% url 'post_detail' post.slug %}" class="post-link">
+                            
+                                <a href="{% url 'post_detail' post.slug %}" class="link">
                                 <h2 class="card-title">{{ post.title }}</h2>
                                 <p class="card-text">{{ post.excerpt }}</p>
                             </a>
@@ -72,6 +66,7 @@
             {% endif %}
         </ul>
     </nav>
+    {% endif %}
     {% endif %}
 </div>
 {%endblock%}
