--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -9,11 +9,21 @@
         <div">
             <div>
                 <!-- Post title goes in these h1 tags -->
-                <h1 class="post-title">{{ post.title }}{{ post.featured_image }}</h1>
+                <h1 class="post-title">{{ post.title }}</h1>
 
                 <!-- Post author goes before the | the post's created date goes after -->
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
             </div>
+            <!-- Show Edit and Delete buttons on questions created by the user -->
+            {% if request.user == post.author %}
+            <div class="d-flex justify-content-center">
+                <a class="btn btn--secondary btn--icon mx-1" href="{% url 'edit_post' post.id %}"
+                    aria-label="Delete question">edit</a>
+                  
+                <a class="btn btn--secondary btn--icon mx-1" href="{% url 'delete_post' post.id %}"
+                    aria-label="Delete question">delete</a>
+            </div>
+            {% endif %}
         </div>
     </div>
 </div>
@@ -31,22 +41,7 @@
                 <div class="row">
 
                     <div class="col-1">
-                        <strong>
-                            {% if user.is_authenticated %}
-                            <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
-                                {% csrf_token %}
-                                {% if liked %}
-                                <button type="submit" name="post_id" value="{{post.slug}}" class="btn-like"><i class="fas fa-heart"></i></button>
-                                {% else %}
-                                <button type="submit" name="post_id" value="{{post.slug}}" class="btn-like"><i class="far fa-heart"></i></button>
-                                {% endif %}
-                            </form>
-                            {% else %}
-                            <span class="text-secondary"><i class="far fa-heart"></i></span>
-                            {% endif %}
-                        <!-- The number of likes goes before the closing strong tag -->
-                        <span class="text-secondary">{{ post.number_of_likes }} </span>
-                        </strong>
+                        
                     </div>
                     <div class="col-1">
                         {% with comments.count as total_comments %}
