--- a/templates/user_post.html
+++ b/templates/user_post.html
@@ -17,7 +17,7 @@
                 <form action="{% url 'user_post' %}" method="POST" class="text-center mb-0">
                     {{ post_form | crispy }}
                     {% csrf_token%}
-                    <button type="submit" class="btn btn--main no-border">
+                    <button type="submit" class="btn">
                     Make a Post <i class="fas fa-plus p-1"></i></button>
                 </form>
 
