--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #000000;
+    background-color: linear-gradient(#000000, #23bb3f);
 }
 
 .brand {
@@ -15,11 +15,12 @@ body {
 }
 
 .dark-bg {
-    background-color: #02172e;
+    background-color: linear-gradient(#000000, #23bb3f);
+
 }
 
 .main-bg {
-    background-color: #000000;
+    background-color: linear-gradient(#000000, #23bb3f);
 }
 
 .card {
@@ -29,14 +30,6 @@ body {
 
 .image-container {
     position: relative;
-}
-
-.image-flash {
-    position: absolute;
-    bottom: 5%;
-    min-width: 30%;
-    left: -2px;
-    background-color: #8a8a8a;
 }
 
 .author {
@@ -86,7 +79,7 @@ body {
 
 .post-link:hover,
 .page-link {
-    color: #e810d2;
+    color: #156703;
 }
 
 .post-title {
@@ -100,24 +93,25 @@ body {
 }
 
 .btn-signup {
-    background-color: #e810d2;
-    color: #fff;
+    background-color: #ffffff;
+    color: rgb(0, 255, 13);
 }
 
 .btn-signup:hover,
 .btn-signup:active {
     background-color: #fff;
-    color: #23BBBB;
+    color: #156703;
+
 }
 
 .link {
-    color: #ffffff;
+    color: #156703;
     text-decoration: none;
 }
 
 .link:hover,
 .link:active {
-    color: #e810d2;
+    color: #000000;
     text-decoration: underline;
 }
 
@@ -129,12 +123,7 @@ body {
 
 .btn-like:hover,
 .btn-like:active {
-    color: #e810d2;
+    color: #ffffff;
     background: transparent;
     border: none;
-}
-
-.post-image {
-    height: 200px;
-    width: 200px;
 }
