--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-12">
 
-            <a href="{% url 'user_post' %}">Make a Post</a>
+            <a class="btn btn-primary" href="{% url 'user_post' %}">Make a Post</a>
 
         </div>
     </div>
