html updates to fit the screen better

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">"Game Tonight?" 2022</p>
+        <p class="m-0 text-center text-black">Game Tonight? 2022</p>
     </footer>
 </body>
 
