--- a/templates/delete_post.html
+++ b/templates/delete_post.html
@@ -21,8 +21,8 @@
                     <strong>{{ post.title }}</strong>
 
                     <div class="text-center my-4">
-                        <button type="submit" class="btn">Yes</button>
-                        <a class="btn" href="{% url 'home' %}">No</a>
+                        <button type="submit" class="btn btn-primary">Yes</button>
+                        <a class="btn btn-primary" href="{% url 'home' %}">No</a>
                     </div>
                 </form>
 
