--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -19,7 +19,7 @@
                     {% csrf_token %}
 
                     <div class="text-center my-4">
-                        <button type="submit" class="btn">Submit</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
                 </form>
 
