--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,16 @@
 body {
-    background-color: linear-gradient(#000000, #23bb3f);
+    background-color: #23bb3f;
 }
 
 .brand {
     font-family: Lato, Verdana;
     font-size: 2rem;
     font-weight: 60000;
-    color:  #7c7cdc;
+    color:  #ffffff;
 }
 
-.btn .btn-primary {
-    background-color: #fff;
+.btn-primary {
+    color: #fff;
 }
 
 
@@ -19,17 +19,25 @@ body {
 }
 
 .dark-bg {
-    background-color: linear-gradient(#000000, #23bb3f);
+    background-color: rgb(255, 255, 255)
 
 }
 
 .main-bg {
-    background-color: linear-gradient(#000000, #23bb3f);
+    background-color:  #23bb3f;
 }
 
-.card {
-    border: none;
+.card-body {
+    border: 2px;
     background-color: transparent;
+}
+
+.card-title {
+    color: black;
+}
+
+.card-text {
+    color: black;
 }
 
 .image-container {
@@ -42,39 +50,6 @@ body {
     text-transform: uppercase;
 }
 
-.masthead {
-    margin-top: 10px;
-    overflow: hidden;
-    position: relative;
-    display: inline-block;
-    height: 33vh;
-    width: 100%;
-}
-
-.masthead-text {
-    background-color: #000000;
-    color: white;
-    position: relative;
-}
-
-.masthead-image {
-    position: relative;
-    overflow: hidden;
-}
-
-.masthead-image:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 90%;
-    height: 100%;
-    width: 150%;
-    background: #445261;
-    -webkit-transform: skew(15deg);
-    -moz-transform: skew(15deg);
-    transform: skew(15deg);
-    z-index: 100;
-}
 
 .post-link {
     text-decoration: none;
@@ -87,7 +62,8 @@ body {
 }
 
 .post-title {
-    margin-top: 20%;
+    color: #ffffff;
+    margin-top: 5%;
     margin-left: 5%;
 }
 
@@ -111,12 +87,13 @@ body {
 .link {
     color: #156703;
     text-decoration: none;
+
 }
 
 .link:hover,
 .link:active {
-    color: #000000;
-    text-decoration: underline;
+    color: #000;
+    text-decoration: none;
 }
 
 .btn-like {
@@ -130,4 +107,8 @@ body {
     color: #ffffff;
     background: transparent;
     border: none;
+}
+
+.comment-form {
+    max-width: 540px;
 }
