--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,7 +5,8 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
+  <hr>
 
 <h1>{% trans "Sign Out" %}</h1>
 
