--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -4,103 +4,99 @@
 
 {% load crispy_forms_tags %}
 
-<div>
     <div class="container">
-        <div">
             <div>
                 <!-- Post title goes in these h1 tags -->
                 <h1 class="post-title">{{ post.title }}</h1>
 
                 <!-- Post author goes before the | the post's created date goes after -->
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
-            </div>
+          
             <!-- Show Edit and Delete buttons on questions created by the user -->
             {% if request.user == post.author %}
-            <div class="d-flex justify-content-center">
-                <a class="btn btn btn-light" href="{% url 'edit_post' post.id %}"
-                    aria-label="Delete question">edit</a>
-                  
-                <a class="btn btn-light" href="{% url 'delete_post' post.id %}"
-                    aria-label="Delete question">delete</a>
+            >
+                <a class="link" href="{% url 'edit_post' post.id %}"
+                    aria-label="Delete post">edit</a>
+                  <br>
+            >    <a class="link" href="{% url 'delete_post' post.id %}"
+                    aria-label="Delete post">delete</a>
             </div>
             {% endif %}
         </div>
     </div>
-</div>
+
 
 <div class="container">
-    <div class="row">
+    <div class="row-6">
         <div">
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
-                <!-- Use the | safe filter inside the template tags -->
                 <p class="card-text ">
                     {{ post.content | safe }}
-                
+                <hr>
                 </p>
                 <div class="row">
 
                     <div class="col-1">
-                        
+                
                     </div>
                     <div class="col-1">
                         {% with comments.count as total_comments %}
                         <strong class="text-secondary"><i class="far fa-comments"></i>
                             <!-- Our total_comments variable goes before the closing strong tag -->
                             {{ total_comments }}</strong>
-                        {% endwith %}
+                        {% endwith %}  
+                        
                     </div>
                 </div>
             </div>
+            <div class="card-body">
+                <h3>Comments:</h3>
+               <!-- We want a for loop inside the empty control tags to iterate through each comment in comments -->
+               {% for comment in comments %}
+               <div class="comments" style="padding: 10px;">
+                   <p class="font-weight-bold">
+                       <!-- The commenter's name goes here.-->
+                       
+                       <span class=" text-black font-weight-normal">
+                           <!-- The comment's created date goes here -->
+                           {{ comment.created_on }}
+                       </span> <span class="text-white"> {{ user.get_username }}  </span>wrote:
+                   </p>
+                   <!-- The body of the comment goes before the | -->
+                   {{ comment.body | linebreaks }}
+               </div>
+               <!-- Our for loop ends here -->
+               {% endfor %}
+
+               <div class="card-body">
+               
+                   {% if user.is_authenticated %}
+   
+                   <form class="comment-form" method="POST">
+                       {{ comment_form | crispy }}
+                       {% csrf_token %}
+   
+                       <div class="text-center my-4">
+                           <button type="submit" class="btn btn-primary">Submit</button>
+                           <a class="btn btn--secondary mx-1" href="{% url 'home' %}">Cancel</a>
+                       </div>
+                   </form>
+                   {% endif %}
+               </div>
+           </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
-            <hr>
-        </div>
-    </div>
-    <div class="row">
+    <div>
         <div>
-            <h3>Comments:</h3>
-            <div class="card-body">
-                <!-- We want a for loop inside the empty control tags to iterate through each comment in comments -->
-                {% for comment in comments %}
-                <div class="comments" style="padding: 10px;">
-                    <p class="font-weight-bold">
-                        <!-- The commenter's name goes here.-->
-                        {{ user.get_username }}
-                        <span class=" text-muted font-weight-normal">
-                            <!-- The comment's created date goes here -->
-                            {{ comment.created_on }}
-                        </span> wrote:
-                    </p>
-                    <!-- The body of the comment goes before the | -->
-                    {{ comment.body | linebreaks }}
-                </div>
-                <!-- Our for loop ends here -->
-                {% endfor %}
-            </div>
+           
+           
         </div>
         <div>
-            <div class="card-body">
-                
-                {% if user.is_authenticated %}
-
-                <form method="POST">
-                    {{ comment_form | crispy }}
-                    {% csrf_token %}
-
-                    <div class="text-center my-4">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                        <a class="btn btn--secondary mx-1" href="{% url 'home' %}">Cancel</a>
-                    </div>
-                </form>
-            </div>
+            
         </div>
     </div>
 </div>
-`
 
-{% endif %}
 
 {% endblock content %}
