--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,12 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html class="h-100">
+<html lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+
     <title>Game Tonight?</title>
     
     
@@ -56,7 +59,7 @@
             </div>
         </div>
     </nav>
-
+<!-- messages to inform the user they have posted, deleted, edited etc -->
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
@@ -77,7 +80,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg">
+    <footer class="footer mt-auto dark-bg">
         <p class="m-0 text-center text-black">Game Tonight? 2022</p>
     </footer>
 </body>
