--- a/templates/delete_post.html
+++ b/templates/delete_post.html
@@ -5,7 +5,7 @@
 {% load crispy_forms_tags %}
 
 {% if request.user == post.author %}
-
+<!-- if user is the same that posted they will see this -->
 <div class="container-fluid my-4">
     <div class="row">
         <div class="col-md-6 offset-md-3 pt-3">
@@ -32,7 +32,7 @@
 </div>
 
 {% else %}
-
+<!-- non registered user will see this -->
 <div class="container-fluid my-4">
     <div class="row">
         <div class="col-md-6 offset-md-3 text-center pt-3">
