--- a/templates/index.html
+++ b/templates/index.html
@@ -41,10 +41,12 @@
 
             </div>
         </div>
-    </div>  </div>
-        </div>
+    </div>  
+        
     </div>
+    <!-- if there are more than 9 posts then the pages will automatically paginate -->
     {% if is_paginated %}
+    <div>
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             {% if page_obj.has_previous %}
