--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,9 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-100">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-
     <title>Game Tonight?</title>
     
     
@@ -59,7 +56,7 @@
             </div>
         </div>
     </nav>
-<!-- messages to inform the user they have posted, deleted, edited etc -->
+
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
@@ -78,10 +75,10 @@
         <!-- Content Goes here -->
         {% endblock content %}
     </main>
-
+ 
     <!-- Footer -->
-    <footer class="footer mt-auto dark-bg">
-        <p class="m-0 text-center text-black">Game Tonight? 2022</p>
+    <footer class="footer mt-auto py-3 dark-bg">
+        <p class="m-0 text-center text-black bottom-0;">Game Tonight? 2022</p>
     </footer>
 </body>
 
