--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,19 @@
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-black bottom-0;">Game Tonight? 2022</p>
+        {% if request.user.is_authenticated %}
+        <!-- subscribe to newsletter form -->
+        <div class="col-md-4">
+            <form method="POST" action="{% url 'newsletters' %}" id="newsletter-form" class="text-muted form mb-5"
+            enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ subscribe_form }}
+            <div class="mt-3">
+                <button class="btn btn-main hvr-back-pulse" type="submit">Subscribe!</button>
+            </div>
+          </form>
+          {% endif %}
+
     </footer>
 </body>
 
