--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html class="h-100">
@@ -37,10 +38,14 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
-                    {% if user.is_authenticated %}
+                    {% if user.is_authenticated %} 
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'favourites' %}">Favourites</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                     </li>
+                  
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
@@ -85,7 +90,7 @@
             <form method="POST" action="{% url 'newsletters' %}" id="newsletter-form" class="text-muted form mb-5"
             enctype="multipart/form-data">
             {% csrf_token %}
-            {{ subscribe_form }}
+            {{ subscribe_form | crispy }}
             <div class="mt-3">
                 <button class="btn btn-main hvr-back-pulse" type="submit">Subscribe!</button>
             </div>
